# reputation_effects

./: .gitignore  .gitmodules  BPayoffMatrix.csv  BPayoffMatrix2.csv  CMakeLists.txt  Doxyfile  GPayoffMatrix.csv  PayoffMatrix.csv  README.md  batch.sh  generateNorm.py  main.cpp  main.ipynb  norm.csv  packages.txt  stepNum-1000_population-400_s-0.900000_b-4_beta-3_c-1_gamma-1_norm-norm10.csv  stepNum-1000_population-400_s-0_b-4_beta-3_c-1_gamma-1_norm-norm10.csv  stepNum-1000_population-400_s-1_b-4_beta-3_c-1_gamma-1.csv  visualize.ipynb  visualize_json.ipynb  visualize_json_long_vs_short.ipynb  visualize_json_longterm.ipynb  visualize_json_longterm_b-gamma.ipynb  visualize_json_rl.ipynb  visualize_json_rl_all_log.ipynb  visualize_json_shortterm.ipynb
formula/: game.html  game.ipynb  game.md  output.txt  stochastic_stra-conti_social_norm.ipynb
formula/payoffMatrix_longterm_no_norm_error/: payoffMatrix.md
formula/payoffMatrix_shortterm/: payoffMatrix.md
include/: Action.hpp  BiMap.hpp  BiMap.tpp  Buffer.hpp  JsonFile.hpp  MyRandom.hpp  Norm.hpp  PayoffMatrix.hpp  Player.hpp  PoolDeque.hpp  PoolDeque.tpp  QTable.hpp  RewardMatrix.hpp  Strategy.hpp  Transition.hpp
norm/: norm0.csv  norm1.csv  norm10.csv  norm11.csv  norm12.csv  norm13.csv  norm14.csv  norm15.csv  norm2.csv  norm3.csv  norm4.csv  norm5.csv  norm6.csv  norm7.csv  norm8.csv
payoffMatrix/: PayoffMatrix0.csv  PayoffMatrix1.csv  PayoffMatrix10.csv  PayoffMatrix10_example.csv  PayoffMatrix11.csv  PayoffMatrix12.csv  PayoffMatrix13.csv  PayoffMatrix14.csv  PayoffMatrix15.csv  PayoffMatrix2.csv  PayoffMatrix3.csv  PayoffMatrix4.csv  PayoffMatrix5.csv  PayoffMatrix6.csv  PayoffMatrix7.csv  PayoffMatrix8.csv  PayoffMatrix9.csv  README.md  payoffMatrixX_example.csv
payoffMatrix/payoffMatrix_longterm_no_norm_error/: PayoffMatrix0.csv  PayoffMatrix1.csv  PayoffMatrix10.csv  PayoffMatrix11.csv  PayoffMatrix12.csv  PayoffMatrix13.csv  PayoffMatrix14.csv  PayoffMatrix15.csv  PayoffMatrix2.csv  PayoffMatrix3.csv  PayoffMatrix4.csv  PayoffMatrix5.csv  PayoffMatrix6.csv  PayoffMatrix7.csv  PayoffMatrix8.csv  PayoffMatrix9.csv
payoffMatrix/payoffMatrix_shortterm/: PayoffMatrix13.csv  PayoffMatrix4.csv
rewardMatrix/: RewardMatrix.csv
src/: Action.cpp  Buffer.cpp  JsonFile.cpp  MyRandom.cpp  Norm.cpp  PayoffMatrix.cpp  Player.cpp  QTable.cpp  RewardMatrix.cpp  Strategy.cpp  Transition.cpp
strategy/donor/: C.csv  D.csv  OC.csv  OD.csv
strategy/recipient/: AR.csv  NR.csv  UR.csv
tests/: BufferTest.cpp  MyRandomTest.cpp  NormTest.cpp  PoolDequeTest.cpp  RewardMatrixTest.cpp
visualize/: heatmap.ipynb
